--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fastest-levenshtein": "^1.0.16",
     "find-up": "^4.1.0",
     "function-bind": "^1.1.1",
+    "gh-pages": "^5.0.0",
     "glob-to-regexp": "^0.4.1",
     "graceful-fs": "^4.2.11",
     "has": "^1.0.3",
@@ -105,7 +106,7 @@
     "wildcard": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
@@ -121,6 +122,6 @@
   "bugs": {
     "url": "https://github.com/mercymugambi/webpack-project/issues"
   },
-  "homepage": "https://github.com/mercymugambi/webpack-project#readme",
+  "homepage": "https://github.com/mercymugambi.io/ToDoList",
   "description": ""
 }
