--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
@@ -8,6 +9,8 @@
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^21.1.1",
     "style-loader": "^3.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -112,6 +115,7 @@
     "start": "webpack serve --open",
     "server": "node server.js",
     "build": "webpack",
+    "testEnvironment": "jsdom",
     "test": "jest"
   },
   "repository": {
