--- a/package.json
+++ b/package.json
@@ -1,133 +1,42 @@
 {
+  "name": "webpack-demo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "webpack",
+    "stylelint": "stylelint \"**/*.{css,scss}\"",
+    "eslint": "eslint .",
+    "hint": "hint .",
+    "test": "jest --watchAll",
+    "fix": "stylelint \"**/*.{css,scss}\" --fix && eslint . --fix"
+  },
   "devDependencies": {
-    "@testing-library/dom": "^9.2.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "babel-eslint": "10.x",
     "css-loader": "^6.7.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.27.5",
-    "express": "^4.18.2",
+    "eslint": "7.x",
+    "eslint-config-airbnb-base": "14.x",
+    "eslint-plugin-import": "2.x",
+    "hint": "7.x",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jsdom": "^21.1.1",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
+    "postcss-preset-env": "^8.2.0",
     "style-loader": "^3.3.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint": "13.x",
+    "stylelint-config-standard": "21.x",
+    "stylelint-csstree-validator": "1.x",
+    "stylelint-scss": "3.x",
+    "tailwindcss": "^3.3.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^6.0.2",
     "webpack-dev-server": "^4.13.1"
   },
-  "name": "webpack-project",
-  "version": "1.0.0",
-  "private": "true",
   "dependencies": {
-    "acorn": "^8.8.2",
-    "acorn-import-assertions": "^1.8.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "browserslist": "^4.21.5",
-    "buffer-from": "^1.1.2",
-    "caniuse-lite": "^1.0.30001472",
-    "chrome-trace-event": "^1.0.3",
-    "clone-deep": "^4.0.1",
-    "colorette": "^2.0.19",
-    "commander": "^2.20.3",
-    "cross-spawn": "^7.0.3",
-    "electron-to-chromium": "^1.4.342",
-    "enhanced-resolve": "^5.12.0",
-    "envinfo": "^7.8.1",
-    "es-module-lexer": "^0.9.3",
-    "escalade": "^3.1.1",
-    "eslint-scope": "^5.1.1",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^4.3.0",
-    "events": "^3.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fastest-levenshtein": "^1.0.16",
-    "find-up": "^4.1.0",
-    "function-bind": "^1.1.1",
-    "gh-pages": "^5.0.0",
-    "glob-to-regexp": "^0.4.1",
-    "graceful-fs": "^4.2.11",
-    "has": "^1.0.3",
-    "has-flag": "^4.0.0",
-    "import-local": "^3.1.0",
-    "interpret": "^3.1.1",
-    "is-core-module": "^2.11.0",
-    "is-plain-object": "^2.0.4",
-    "isexe": "^2.0.0",
-    "isobject": "^3.0.1",
-    "jest-worker": "^27.5.1",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-schema-traverse": "^0.4.1",
-    "kind-of": "^6.0.3",
-    "loader-runner": "^4.3.0",
-    "locate-path": "^5.0.0",
-    "lodash": "^4.17.21",
-    "merge-stream": "^2.0.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "neo-async": "^2.6.2",
-    "node-releases": "^2.0.10",
-    "p-limit": "^2.3.0",
-    "p-locate": "^4.1.0",
-    "p-try": "^2.2.0",
-    "path-exists": "^4.0.0",
-    "path-key": "^3.1.1",
-    "path-parse": "^1.0.7",
-    "picocolors": "^1.0.0",
-    "pkg-dir": "^4.2.0",
-    "punycode": "^2.3.0",
-    "randombytes": "^2.1.0",
-    "rechoir": "^0.8.0",
-    "resolve": "^1.22.1",
-    "resolve-cwd": "^3.0.0",
-    "resolve-from": "^5.0.0",
-    "safe-buffer": "^5.2.1",
-    "schema-utils": "^3.1.1",
-    "serialize-javascript": "^6.0.1",
-    "shallow-clone": "^3.0.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "source-map": "^0.6.1",
-    "source-map-support": "^0.5.21",
-    "supports-color": "^8.1.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "tapable": "^2.2.1",
-    "terser": "^5.16.8",
-    "terser-webpack-plugin": "^5.3.7",
-    "update-browserslist-db": "^1.0.10",
-    "uri-js": "^4.4.1",
-    "watchpack": "^2.4.0",
-    "webpack-merge": "^5.8.0",
-    "webpack-sources": "^3.2.3",
-    "which": "^2.0.2",
-    "wildcard": "^2.0.0"
-  },
-  "scripts": {
-    "deploy": "gh-pages -d dist",
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "server": "node server.js",
-    "build": "webpack",
-    "testEnvironment": "jsdom",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mercymugambi/webpack-project.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mercymugambi/webpack-project/issues"
-  },
-  "homepage": "https://github.com/mercymugambi.io/ToDoList",
-  "description": ""
+    "jest": "^29.5.0",
+    "lodash": "^4.17.21"
+  }
 }
